View: add loading text  before markdown landering on view of issue, board, pull request

--- a/app/assets/stylesheets/less/_page.less
+++ b/app/assets/stylesheets/less/_page.less
@@ -2949,6 +2949,14 @@
     }
 }
 
+div.markdown-loader {
+    font-size: 16px;
+    min-height: 140px;
+    padding: 15px 20px;
+    text-align: left;
+    clear: both;    
+}
+
 div.markdown-preview {
     font-size: 13px;
     overflow-x:auto;
