--- a/app/views/board/view.scala.html
+++ b/app/views/board/view.scala.html
@@ -59,6 +59,9 @@
             }
           </a>
         </div>
+            <div class="markdown-loader">
+                <i class=" yobicon-loading2"></i> Loading....
+            </div>
     		<div class="content markdown-wrap markdown-before" markdown="true">@post.body</div>
         <div class="attachments" id="attachments" data-resource-type="@ResourceType.BOARD_POST" data-resource-id="@post.id"></div>
     	</div>
