Project: remove nbsp character for padding on creating projects and change project settings

--- a/app/assets/stylesheets/less/_page.less
+++ b/app/assets/stylesheets/less/_page.less
@@ -1869,6 +1869,15 @@
     }
 }
 
+label.inline-list {
+    margin-left:15px;
+    vertical-align: middle;
+
+    &:first-child {
+        margin-left: 0;
+    }
+}
+
 .n-alert.project-del {
     margin-left: 125px;
 }
