--- a/app/views/project/importing.scala.html
+++ b/app/views/project/importing.scala.html
@@ -191,23 +191,30 @@
                     @Messages("project.menu.setting")
                 </div>
                 <div class="span10 cu-desc">
-                    <input type="checkbox" class="radio-btn" id="menuSettingCode" name="code" value="true" checked="checked">
-                    <label for="menuSettingCode" class="bg-radiobtn label-public">@Messages("menu.code")</label>
-                    &nbsp;&nbsp;&nbsp;
-                    <input type="checkbox" class="radio-btn" id="menuSettingIssue" name="issue" value="true" checked="checked">
-                    <label for="menuSettingIssue" class="bg-radiobtn label-public">@Messages("menu.issue")</label>
-                    &nbsp;&nbsp;&nbsp;
-                    <input type="checkbox" class="radio-btn" id="menuSettingPullRequest" name="pullRequest" value="true" checked="checked">
-                    <label for="menuSettingPullRequest" class="bg-radiobtn label-public">@Messages("menu.pullRequest")</label>
-                    &nbsp;&nbsp;&nbsp;
-                    <input type="checkbox" class="radio-btn" id="menuSettingReview" name="review" value="true" checked="checked">
-                    <label for="menuSettingReview" class="bg-radiobtn label-public">@Messages("menu.review")</label>
-                    &nbsp;&nbsp;&nbsp;
-                    <input type="checkbox" class="radio-btn" id="menuSettingMilestone" name="milestone" value="true" checked="checked">
-                    <label for="menuSettingMilestone" class="bg-radiobtn label-public">@Messages("milestone")</label>
-                    &nbsp;&nbsp;&nbsp;
-                    <input type="checkbox" class="radio-btn" id="menuSettingBoard" name="board" value="true" checked="checked">
-                    <label for="menuSettingBoard" class="bg-radiobtn label-public">@Messages("menu.board")</label>
+                    <label for="menuSettingCode" class="bg-radiobtn label-public inline-list">
+                      <input type="checkbox" class="radio-btn" id="menuSettingCode" name="code" value="true" checked="checked">
+                      @Messages("menu.code")
+                    </label>
+                    <label for="menuSettingIssue" class="bg-radiobtn label-public inline-list ">
+                      <input type="checkbox" class="radio-btn" id="menuSettingIssue" name="issue" value="true" checked="checked">
+                      @Messages("menu.issue")
+                    </label>
+                    <label for="menuSettingPullRequest" class="bg-radiobtn label-public inline-list">
+                      <input type="checkbox" class="radio-btn" id="menuSettingPullRequest" name="pullRequest" value="true" checked="checked">
+                      @Messages("menu.pullRequest")
+                    </label>
+                    <label for="menuSettingReview" class="bg-radiobtn label-public inline-list">
+                      <input type="checkbox" class="radio-btn" id="menuSettingReview" name="review" value="true" checked="checked">
+                      @Messages("menu.review")
+                    </label>
+                    <label for="menuSettingMilestone" class="bg-radiobtn label-public inline-list">
+                      <input type="checkbox" class="radio-btn" id="menuSettingMilestone" name="milestone" value="true" checked="checked">
+                      @Messages("milestone")
+                    </label>
+                    <label for="menuSettingBoard" class="bg-radiobtn label-public inline-list">
+                      <input type="checkbox" class="radio-btn" id="menuSettingBoard" name="board" value="true" checked="checked">
+                      @Messages("menu.board")
+                    </label>
                 </div>
             </div>
             <!-- // -->
